ingress.yaml
1).Install NGINX Ingress Controller in your cluster.

for bare-metals:

kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/baremetal/deploy.yaml


2).Create an Ingress resource with rules for routing traffic.
Here is a basic example of an Ingress resource manifest:

vi.ingress.yaml
---------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations :
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-regex : "true"
spec:
  ingressClassName : nginx
  rules:
    - http:
        paths:
        - path: /red
          pathType: Prefix
          backend:
            service:
              name: abc
              port:
                number: 80
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: service2
              port:
                number: 80

--------------------------
two depolys and service
vi.dp.yaml
---------
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swiggy
  name: swiggy-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
      - name: cont1
        image: banalanaveenkumar/resgistaionrepo:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: abc
spec:
  type: NodePort
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31111

-----------------
vi dp2.yaml
----------
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: swiggy-deploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: cont1
        image: banalanaveenkumar/rechargerepo:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 82
      targetPort: 80
      nodePort: 32222
-----------------

root@k8smaster:~# kubectl get ing
NAME          CLASS   HOSTS   ADDRESS   PORTS   AGE
app-ingress   nginx   *                 80      96s


root@k8smaster:~# kubectl get svc -n ingress-nginx
NAME                                 TYPE           CLUSTER-IP      EXTERNAL-IP   PORT(S)                      AGE
ingress-nginx-controller             LoadBalancer   10.99.44.2      <pending>     80:31354/TCP,443:30502/TCP   2d
ingress-nginx-controller-admission   ClusterIP      10.111.73.234   <none>        443/TCP                      2d
root@k8smaster:~# vi ingress.yaml

we can check url

workernode-public-ip:ingress-nginx-controller-port/path-prefix
http://35.200.234.40:31354/blue
http://35.200.234.40:31354/red
=====================
